explorations/wikipedia/css/varla-varfo.css
/* ... */
@media (prefers-color-scheme: dark) {
    :root{
        /* This is actually the inverted color of what we really want:
         * a nice light sky blue (according to the color-picker: #7b91d4)
         * */
        --background: var(--dark-background);
        --link-color: var(--dark-link-color);
        --layout-border-color: var(--dark-layout-border-color);
        --mode-invert: var(--dark-mode-invert);
    }
    :root * {
        --background: var(--default-background);
    }
    * {
        --grad-active-animation: var(--grad-animation-name);
    }
    .user_preferences-color_scheme-default:after{
        content: " (dark)";
    }
}
:root.explicit-dark-mode{
    --background: var(--dark-background);
    --link-color: var(--dark-link-color);
    --layout-border-color: var(--dark-layout-border-color);
    --mode-invert: var(--dark-mode-invert);
}

.explicit-dark-mode * {
    --grad-active-animation: var(--grad-animation-name);
    --background: var(--default-background);
}

@media (prefers-color-scheme: light){
    :root{
        --background: var(--light-background);
        --color: var(--light-color);
        --mode-invert: var(--light-mode-invert);
        --link-color: var( --light-link-color);
        --layout-border-color: var(--light-layout-border-color);
    }

    * {
        --grad-active-animation: no-animation;
    }
    .user_preferences-color_scheme-default:after{
        content: " (light)";
    }
}

:root.explicit-light-mode {
    --background: var(--light-background);
    --color: var(--light-color);
    --mode-invert: var(--light-mode-invert);
    --link-color: var( --light-link-color);
    --layout-border-color: var(--light-layout-border-color);
}

.explicit-light-mode * {
    --grad-active-animation: no-animation;
}


:root{
    background: var(--background);
    color: var(--color);
    filter: invert(var(--mode-invert, 0))
}
img {
    /* Invert back; this is quite elegant! */
    filter: invert(var(--mode-invert, 0))
}

/* Attempts to use the framework to reproduce the original font-settings. */
#mw-head,
#mw-panel {
    --font-family: RobotoFlex;
    --grad-animation-name: RobotoFlex-grad-by-font-size;
    --font-xtra: 468; /*FIXME: consider full spec, including esp. --font-size (pt)*/
}
.vector-menu-portal .body li, .vector-menu-portal .vector-menu-content li {
    --font-size-rem: 3/4;
    --line-height: 1.125;
    word-wrap: break-word;
}

h1, h2, h3, h4 {
    --font-family: RobotoFlex;
    --grad-animation-name: RobotoFlex-grad-by-font-size;
    --font-xtra: 468; /*FIXME: consider full spec, including esp. --font-size (pt)*/
}

h1 { /* main headline */
    /*
     * Requested is to calculate opsz, size etc relative to the
     * body/document text size, as in REM units, but we don't use rem
     * as they have limitations getting the actual numerical font-size
     * in pt from them, so rem are unusable in e.g. font-variation-settings
     * or other calculations.
     */
    --font-size-rem: 5;
    --font-opsz-rem: 7;

    --font-weight: 650;
    --font-width: 85;
    /* With .8 this will colide at some widths, but it looks better with
     * the smaller line gap when it does not. Hence we're searching for a
     * solution here (e.g. YTRA?).
     */
    --line-height: .8; /*1.02;*/
    /* only when line-height < 1.02 this is required so descenders don't
     * hit the paragraph below.
     */
    margin-block-end: .15em;
    --hyphens: none;
}

/* subsection headline */
h2,
.shorts h1
{
    --font-size-rem: 2.3333 ; /* ~ 28 pt @ 12 pt body*/
    --font-weight: 750;
    --font-width: 100;
    --line-height: 1.02;
    --hyphens: none;
}
/* sub-subsection headline/"Captionhead" */
h3,
.shorts h2
{
    --font-size-rem: 1.5; /* ~ 18 pt @ 12 pt body*/
    --font-weight: 850;
    --font-width: 100;
    --line-height: 1.02;
    --hyphens: none;
}
/* h4 is not used in the Typography article, but in other Wikipedia.
 * Also not used in Emsquare
 */
h4,
.shorts h3
 {

    --font-size-rem: 1.5; /* ~ 18 pt @ 12 pt body*/
    --font-weight: 850;
    --font-width: 100;
    --line-height: 1.02;
    --hyphens: none;
}

#siteSub {
    /* This functions as the "subhead", but it seems to be:
     * "From Wikipedia, the free encyclopedia" in every case!
     */
    --font-family: AmstelVar;
    --grad-animation-name: AmstelVar-grad-by-font-size;
    --font-xtra: 562; /* look at font spec for defalt value*/
    --font-size-rem: 3/2;
    --font-weight: 400;
}

.vector-menu-portal h3 {
    --font-size-rem: 3/4;
    --font-weight: 500;
}

.mw-editsection, .mw-editsection-like {
    --font-size-rem: 13/16;
    --font-weight: 400;
    --line-height: 1;
}

@property --sup-scale {
  syntax: '<number>';
  inherits: true;
  initial-value: 0;
}
/* get font size and
 *
 * * .57 scale size for 14 pt
 * for 8 pt = .65,
 * for 144 pt. .25
 */
@keyframes synth-sub-and-super-script {
    0% { /* 8pt */
        --sup-scale: .65
    }
    4.41% { /*   14pt  (14-8)/(144-8) * 100  */
        --sup-scale: .57;
    }
    100% { /* 144pt */
        --sup-scale: .25;
    }
}
/* ... */

